# create-flask

./: .gitignore  AGENT.md  README.md  llms.txt  pyproject.toml
docs/: prd-create-flask.md
src/create_flask/: __init__.py  __main__.py  cli.py  generator.py
src/create_flask/templates/: Dockerfile  Makefile  README.md  celeryconfig.py  docker-compose.yml  dockerignore  env.example  gitignore  gunicorn.conf.py  pyproject.toml  wsgi.py
src/create_flask/templates/app/: __init__.py  extensions.py  settings.py
src/create_flask/templates/app/api/: __init__.py  health.py
src/create_flask/templates/app/core/: __init__.py  base.py  constants.py  exceptions.py
src/create_flask/templates/app/models/: __init__.py
src/create_flask/templates/app/routes/: __init__.py
src/create_flask/templates/app/schemas/: __init__.py
src/create_flask/templates/app/tasks/: __init__.py
src/create_flask/templates/deploy/supervisor/: {{ project_name }}.conf
src/create_flask/templates/tests/: conftest.py  test_health.py
tests/: test_generator.py
